// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Renders Default 1`] = `
.c2 {
  display: flex;
  align-items: center;
}

.c3 {
  display: inline-block;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  cursor: pointer;
  color: #52778b;
  background-color: transparent;
  border-radius: 100rem;
  border: 2px solid #52778b;
  padding: 0.375rem 1.25rem;
}

.c3:hover {
  color: #ffffff;
  background-color: #52778b;
}

.c3:active {
  border: 2px solid #ffffff;
  box-shadow: 0px 0px 0px 2px #52778b;
}

.c0 {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.c1 {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  width: 100%;
  height: 100%;
}

.c1:has(:nth-child(n + 2)) {
  margin-top: 1.375rem;
  justify-content: initial;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-testid="empty-state"
      >
        <button
          class="c3"
        >
          Requests Tasks
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`App Renders Empty State and Completed List 1`] = `
.c4 {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}

.c5 {
  text-align: center;
}

.c6 {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c7 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  padding: 0.5rem;
  border-radius: 0.5rem;
  border: 1px dashed #335a6f;
}

.c2 {
  display: flex;
  align-items: center;
}

.c3 {
  display: inline-block;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  cursor: pointer;
  color: #52778b;
  background-color: transparent;
  border-radius: 100rem;
  border: 2px solid #52778b;
  padding: 0.375rem 1.25rem;
}

.c3:hover {
  color: #ffffff;
  background-color: #52778b;
}

.c3:active {
  border: 2px solid #ffffff;
  box-shadow: 0px 0px 0px 2px #52778b;
}

.c0 {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.c1 {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  width: 100%;
  height: 100%;
}

.c1:has(:nth-child(n + 2)) {
  margin-top: 1.375rem;
  justify-content: initial;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-testid="empty-state"
      >
        <button
          class="c3"
        >
          Requests Tasks
        </button>
      </div>
      <div
        class="c4"
        data-testid="completed-list"
      >
        <h1
          class="c5"
        >
          Completed Tasks
        </h1>
        <ul
          class="c6"
        >
          <li
            class="c7"
            id="task-1"
          >
            <svg
              data-testid="icon-circle"
              fill="#82baa4"
              height="1.5rem"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="12"
              />
            </svg>
            Task Circle
          </li>
          <li
            class="c7"
            id="task-2"
          >
            <svg
              data-testid="icon-rectangle"
              fill="#6491a9"
              height="1.5rem"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="24"
                width="24"
              />
            </svg>
            Task Rectangle
          </li>
          <li
            class="c7"
            id="task-3"
          >
            <svg
              data-testid="icon-polygon"
              fill="#bac1c4"
              height="1.5rem"
              viewBox="0 0 24 24"
              width="1.5rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polygon
                points="12,0 24,8 19,24 4,24 0,8"
              />
            </svg>
            Task Polygon
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`App Renders Tasks List When Completed List is empty 1`] = `
.c1 {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.c2 {
  text-align: center;
}

.c3 {
  width: 100%;
}

.c4 {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem;
  border-radius: 1rem;
  border: 1px dashed #335a6f;
}

.c5:nth-child(even) {
  background-color: #e6e6e6;
}

.c6 {
  display: inline-block;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  cursor: pointer;
  color: #528b7b;
  background-color: #ffffff;
  border-radius: 100rem;
  border: 2px solid #528b7b;
  padding: 0.375rem 1.25rem;
}

.c6:hover {
  color: #ffffff;
  background-color: #528b7b;
}

.c6:active {
  border: 2px solid #ffffff;
  box-shadow: 0px 0px 0px 2px #528b7b;
}

.c0 {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="tasks-list"
    >
      <h1
        class="c2"
      >
        tasks-name
      </h1>
      <progress
        class="c3"
        value="0"
      />
      <ul
        class="c4"
      >
        <li
          class="c5"
        >
          Task Circle
          <button
            class="c6"
          >
            Complete Task
          </button>
        </li>
        <li
          class="c5"
        >
          Task Rectangle
          <button
            class="c6"
          >
            Complete Task
          </button>
        </li>
        <li
          class="c5"
        >
          Task Polygon
          <button
            class="c6"
          >
            Complete Task
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`App Renders Tasks List When Completed List is not empty 1`] = `
.c1 {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.c2 {
  text-align: center;
}

.c3 {
  width: 100%;
}

.c4 {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem;
  border-radius: 1rem;
  border: 1px dashed #335a6f;
}

.c5:nth-child(even) {
  background-color: #e6e6e6;
}

.c6 {
  display: inline-block;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  cursor: pointer;
  color: #528b7b;
  background-color: #ffffff;
  border-radius: 100rem;
  border: 2px solid #528b7b;
  padding: 0.375rem 1.25rem;
}

.c6:hover {
  color: #ffffff;
  background-color: #528b7b;
}

.c6:active {
  border: 2px solid #ffffff;
  box-shadow: 0px 0px 0px 2px #528b7b;
}

.c0 {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="tasks-list"
    >
      <h1
        class="c2"
      >
        tasks-name
      </h1>
      <progress
        class="c3"
        value="0"
      />
      <ul
        class="c4"
      >
        <li
          class="c5"
        >
          Task Circle
          <button
            class="c6"
          >
            Complete Task
          </button>
        </li>
        <li
          class="c5"
        >
          Task Rectangle
          <button
            class="c6"
          >
            Complete Task
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
